Update indledning.tex, linear_algebra.tex, and 9 more files...

--- a/incl/main/indledning/indledning.tex
+++ b/incl/main/indledning/indledning.tex
@@ -9,14 +9,14 @@
 %   m.m.
 I denne rapport afdækkes lineær optimering, også kaldet lineær programmering, med fokus på simplexmetoden.
 Optimeringsproblemer er en fundamental del af matematikken, og i den anvendte matematik udgør disse en vægtig del af matematikeres virke. 
-Dele af forskningsfeltet betragter George Bernard Dantzig som værende  ophavsmand til behandlingen af optimeringsproblemer, som de betragtes i dag, samt til udarbejdelsen af simplexmetoden \citep[side 107]{refa} i 1947.
+Dele af forskningsfeltet betragter George Bernard Dantzig som værende  ophavsmand til behandlingen af optimeringsproblemer, som de betragtes i dag, samt til udarbejdelsen af simplexmetoden i 1947 \citep[side 107]{refa}.
 Der er dog til stadighed diskussion om, hvor lineære programmeringsproblemer som matematisk felt stammer fra, da andre peger på Sovjetunionen og behovet for at optimere produktionen i en planøkonomisk kontekst som ophav \citep[side 155]{refb}.
 Forudsætningen for Dantzigs arbejde med lineære programmeringsproblemer, var hans ansættelse ved Royal Airforce \citep[side 107]{refa}.\\\\
 %
 En applikation af lineære programmeringsproblemer opstod i forbindelse med den vestligt kontrollerede sektor af Berlin.
 Vestberlin lå i Dantzigs samtid dybt inde i den sovjetisk kontrollerede sektor af Tyskland. 
 Som følge af spændingerne mellem Vesteuropa og Sovjetunionen besluttede Josef Stalin at lukke for forsyninger via land til Berlin.
-Det blev derfor nødvendigt for vestmagterne at etablere en luftbro til Berlin, der gjorde det muligt, trods de sovjetiske restriktioner, at indføre basale fornødenheder til de $2.5$ millioner mennesker, som levede i byen.
+Det blev derfor nødvendigt for vestmagterne at etablere en luftbro til Berlin, der gjorde det muligt, trods de sovjetiske restriktioner, at indføre basale fornødenheder til de $2.5$ millioner mennesker, som levede i byen \citep[Side 1]{lay}.
 Da en sådan måde at indføre varer på er ressourceintensiv, opstod der et behov for at gøre dette optimalt, underlagt de logistiske restriktioner.
 Det er derfor et matematisk felt, som i sin brug er nært bundet op på praktiske problemstillinger; dette værende økonomiske og logistiske.
 Det er ligeledes et felt, der har været nært knyttet op til militære problemstillinger, som Dantzigs ansættelsesforhold også antyder.
@@ -45,10 +45,11 @@ Endvidere introduceres i dette kapitel, hvordan lineære programmeringsproblemer
 \item[]\textbf{Kapitel 3} afdækker, hvad en grafisk løsning af lineære programmeringsproblemer indebærer. 
 Geometrisk fremstilling introduceres. 
 Begreber og sætninger, der er nødvendige for simplexmetoden, forefindes ligeledes i dette kapitel. 
-\item[]\textbf{Kapitel 4} er en undersøgelse og anvendelse af simplexmetoden. 
-Kapitlet indeholder en beskrivelse af samt et eksempel på brug af simplexmetoden som løsningsalgoritme.
+\item[]\textbf{Kapitel 4} er en undersøgelse og anvendelse af simplexmetoden.
+Kapitlet indeholder en beskrivelse af forskellige implikationer samt et eksempel på brug af simplexmetoden som løsningsalgoritme.
+Slutteligt forefindes en gennemgang af kompleksiteten.
 \end{itemize}
 %
 Foruden ovennævnte kapitler findes appendicer slutteligt i denne rapport.
-Kilder til indholdet af de enkelte afsnit angives i starten af hvert afsnit. 
-Alt i afsnittet er således fra disse kilder, medmindre andet er angivet. 
+Kilder til indholdet af de enkelte kapitler angives i starten af hvert kapitel. 
+Alt i kapitlet er således udarbejdet med udgangspunkt i disse kilder, medmindre andet er angivet. 
