--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -97,7 +97,7 @@ For indgangene i disse skaleringer findes ligheden $(ck)a_{i,j} = k(ca_{i,j})$.
 %
 \item Bemærk, at $c(a_{i,j} + b_{i,j}) = ca_{i,j} + cb_{i,j}$.
 %
-\item Det samme gøres for ligheden i (g), hvor ligheden $(c + k)a_{i,j} = ca_{i,j} + ka_{i,j}$ opstilles.
+\item Det samme gøres for udsagnet i (g), hvor ligheden $(c + k)a_{i,j} = ca_{i,j} + ka_{i,j}$ opstilles.
 \end{enumerate}
 \end{proof}
 \noindent
