--- a/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
@@ -41,7 +41,7 @@ Sammensættes standardvektorer i en matrix opnås en \textit{identitetsmatrix}.
 %
 \begin{defn}{}{}
 %
-En $n \times n$ \textbf{identitetsmatrix} $I_n$, hvor $n \in \Z^+$, består af alle standardvektorer $\textbf{e}_1, \textbf{e}_2, \ldots, \textbf{e}_n$ i $R^n$, således 
+En $n \times n$ \textbf{identitetsmatrix} $I_n$, hvor $n \in \Z^+$, består af alle standardvektorer $\textbf{e}_1, \textbf{e}_2, \ldots, \textbf{e}_n$ i $\R^n$, således at
 $$
 I_n=
 \begin{bmatrix}
