--- a/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
@@ -82,6 +82,6 @@ Dette tydeliggøres ved at betragte $cA^T$ og $(cA)^T$.
 For $cA^T$ er indgangene $ca_{j,i}$, og indgangene i $cA$ er $ca_{i,j}$, som efter transponering er $ca_{j,i}$.
 % 
 \item Transponeres $A$ to gange vil resultatet være $A$.
-Første transponering resulterer i en $n \times m$ matrix med indgangene $a_{j,i}$ og anden transponering resulterer i en $m \times n$ matrix med indgangene $a_{i,j}$, hvilket beviser (c).
+Første transponering resulterer i en $n \times m$ matrix med indgangene $a_{j,i}$ og anden transponering resulterer i en $m \times n$ matrix med indgangene $a_{i,j}$.
 \end{enumerate}
 \end{proof}
