--- a/incl/main/linear_algebra/invertibilitet.tex
+++ b/incl/main/linear_algebra/invertibilitet.tex
@@ -13,8 +13,9 @@ Hvis en funktion er både injektiv og surjektiv, så er funktionen \textbf{bijek
 \end{defn}
 \noindent
 %
-Hvis en funktion $f:\R^n \rightarrow \R^m$ er bijektiv, vil det betyde, at der er en invers funktion $f^{-1}:\R^m \rightarrow \R^n$, hvorom det gælder, at $f^{-1}(f(x))=x$.
-Dette gælder, da for hver vektor i $\R^n$ afbilleder én vektor i $\R^m$, og det omvendte gælder også, da værdimængden er hele $\R^m$, så uanset, hvilken vektor i $\R^m$ ville den have en tilsvarende vektor i $\R^n$.
+Bemærk, at for en bijektiv funktion er $m=n$.
+Hvis en funktion $f:\R^n \rightarrow \R^n$ er bijektiv, vil det betyde, at der er en invers funktion $f^{-1}:\R^n \rightarrow \R^n$, hvorom det gælder, at $f^{-1}(f(x))=x$.
+Dette gælder, da for hver vektor i $\R^n$ afbilleder én vektor i $\R^n$, og det omvendte gælder også, da værdimængden er hele $\R^n$, så uanset, hvilken vektor i $\R^n$ ville den have en tilsvarende vektor i $\R^n$.
 Bemærk, at
 $$f^{-1} \neq \frac{1}{f},$$
 men blot notation for den \textit{inverse funktion} til $f$.
@@ -22,7 +23,9 @@ men blot notation for den \textit{inverse funktion} til $f$.
 Illustrationen på figur \ref{fig:afbild}, er dermed ikke injektiv, eftersom der til hvert $y$ ikke kun er et $x$. 
 %
 Ligeså kan en funktion $T:\R^n \rightarrow \R^n$, som er en lineær afbildning med standardmatricen $A$, være invertibel, hvis og kun hvis $A$ er invertibel. 
-%Givet en funktion $T:\R^n \rightarrow \R^n$, som er en lineær afbildning med standardmatricen $A$, så er $T$ invertibel, hvis og kun hvis $A$ er invertibel. 
+%Givet en funktion $T:\R^n \rightarrow \R^n$, som er en lineær afbildning med standardmatricen $A$, så er $T$ invertibel, hvis og kun hvis $A$ er invertibel.
+For en sujektiv funktion skal $A$ have pivot i alle rækker og for en injektiv funktion skal $A$ have pivot i alle søjler.
+Dermed skal $A$ have pivot i alle rækker og søjler og dermed kvadratisk, for at funktionen er bijektiv.
 Lad A være en $n \times n$ invertibel matrix. 
 Så haves for alle $\textbf{v}$, at
 $$T_AT_{A^{-1}}(\textbf{v})=T_A(T_{A^{-1}}(\textbf{v}))=T_A(A^{-1}\textbf{v})=A(A^{-1}\textbf{v})=AA^{-1}\textbf{v}=I_n\textbf{v}=\textbf{v}.$$
